--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,3 @@
-2008-09-15 Francois Suter (Cobweb)  <typo3@cobweb.ch>
+2010-08-31 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
-	* initial code generated with kickstarter
+	* First public release (version 1.0.0)
