--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2011-03-22 Francois Suter (Cobweb)  <typo3@cobweb.ch>
+
+	* Released to TER as version 2.0.0
+
 2011-01-25 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
 	* Added support for versioning/workspaces
