--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2012-07-10 Francois Suter (Cobweb)  <typo3@cobweb.ch>
+
+	* Released to TER as version 2.1.0
+
 2012-06-26 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
 	* Cleaned up some code, verified compatibility with TYPO3 4.7, raised requirements to TYPO3 4.5, resolves #38394
