--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2013-06-20 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
 	* Verified compatibility with TYPO3 6.0 and 6.1, resolves #49277
+	* Added possibility to define field to use as index in getAllRecordsForTable(), resolves #45306
 
 2012-07-10 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
