--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-09-17 Francois Suter (Cobweb)  <typo3@cobweb.ch>
+
+	* Corrected handling of l10n_mode with TYPO3 CMS 6.1, resolves #52044
+
 2013-06-20 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
 	* Verified compatibility with TYPO3 6.0 and 6.1, resolves #49277
